2004-08-18  Julien Puydt  <jpuydt@free.fr>

	* src/gnomemeeting.cpp(DetectDevices): Made sure the ui is updated
	only when it is already created (fixes a warning).

2004-08-16  Damien Sandras  <dsandras@gnome.org>

	* src/config.cpp, src/druid.cpp, src/gnomemeeting.cpp, 
	src/gnomemeeting.h, src/pref_window.cpp: Made DetectDevices update
	the prefs window when used.

2004-08-16  Damien Sandras  <dsandras@gnome.org>

	* src/common.h, src/config.cpp, src/druid.cpp, src/gnomemeeting.cpp,
	src/gnomemeeting.h, src/pref_window.cpp, src/pref_window.h: Started to
	clean up the devices detection and GUI updates.

2004-08-16  Damien Sandras  <dsandras@gnome.org>

	* src/sound_handling.cpp: Removed all references to GmWindow from
	the sound handling classes and functions.

2004-08-16  Damien Sandras  <dsandras@gnome.org>

	* src/connection.cpp, src/gdkvideoio.cpp, src/main_window.cpp, 
	src/main_window.h, src/misc.cpp, src/misc.h, src/videograbber.cpp:
	Removed all references to GmWindow from the video grabber.

2004-08-17  Julien Puydt  <jpuydt@free.fr>

	* src/gnomemeeting.cpp: Fix other little nasty stupid bug.
	
2004-08-17  Julien Puydt  <jpuydt@free.fr>

	* src/callbacks.cpp: Fix little bug.
	
2004-08-16  Damien Sandras  <dsandras@gnome.org>

	* src/callbacks.cpp, src/common.h, src/config.cpp, src/connection.cpp,
	src/endpoint.cpp, src/gatekeeper.cpp, src/gnomemeeting.cpp, 
	src/gnomemeeting.h, src/ils.cpp, src/lid.cpp, src/log_window.cpp,
	src/log_window.h, src/menu.cpp, src/urlhandler.cpp, 
	src/videograbber.cpp: More cleanups to port the log window to a
	GMObject.

2004-08-14  Julien Puydt <jpuydt@free.fr>

	* src/callbacks.cpp: Made some definitions easier to find with
	the Ever-Powerful Grep.
	* src/chat_window.cpp: Fixed something that must have been a bug...
	
2004-08-14  Kilian Krause <kk@verfaction.de>

	* Makefile.am: fixed broken 1>&1 command for gconf installation.

2004-08-13  Kilian Krause <kk@verfaction.de>
